--- a/Docker/web2/public-html/index.html
+++ b/Docker/web2/public-html/index.html
@@ -1,1 +1,11 @@
-hi. web2.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document2</title>
+</head>
+<body>
+    hi. web2.
+</body>
+</html>
